@@ -1,5 +1,9 @@
 2001-10-31  Kevin Vandersloot <kfv101@psu.edu>
 
+	* procdialogs.c: some porting to GtkDialog
+
+2001-10-31  Kevin Vandersloot <kfv101@psu.edu>
+
 	* interface.c: hook up the widgets with mnemonics. This
 	is so much easier in Gtk 2.0 :) Also get the sensitivity stuff
 	right
